src/main/java/com/example/meditag/global/error/exception/ErrorCode.java
package com.example.meditag.global.error.exception;

public enum ErrorCode {
}
